--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
           <i>SON OF <strong>:SENTHIL KUMAR</strong></i>
         </p>
-        <p>I'am 10th standard</p>
+        <p>I'am studying 10th standard</p>
       </td>
     </tr>
   </table>
@@ -27,22 +27,22 @@
 <h3>MY STUDYING EXPERIENCE:</h3>
   <ul>
     <li>U.K.G to second standard in james matriculation school ponneri</li>
-    <li>third standard to 10th satandard in velmmal matriculation school ponneri</li>
+    <li>Studying in Velammal matriculation school Ponneri since 2013</li>
   </ul>
 
 <h3>MY SKILLS:</h3>
   <table>
     <tr>
       <td>Cricket:</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>rubix cube:</td>
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>technology knowledge:</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>Rubix cube:</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Computer knowledge:</td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>HTML:</td>
@@ -53,15 +53,15 @@
 
   <h3>MY HOBBIES:</h3>
   <ul>
-    <li>watching sports on tv📺</li>
-    <li>playing cricket🏏</li>
-    <li>playing games🤖</li>
+    <li>Watching sports on TV📺</li>
+    <li>Playing Cricket🏏</li>
+    <li>Playing Games🤖</li>
   </ul>
   <h3>FAVOURITE SPORTS: </h3>
   <ol>
-    <li>cricket🏏 <a href="https://youtu.be/R0alThHNb0Y" target="_blank">2015 world cup fast ball link</a> </li>
-    <li>foot ball⚽ <a href="https://youtu.be/sNZPEnc4m0w" target="_blank">1 min video of ronaldo link</a> </li>
-    <li> shuttle cork🏸 <a href="https://youtu.be/RoOo7g5V62A" target="_blank">how to take cork for floor link </a>
+    <li>Cricket🏏 <a href="https://youtu.be/R0alThHNb0Y" target="_blank">2015 world cup fast ball link</a> </li>
+    <li>Foot ball⚽ <a href="https://youtu.be/sNZPEnc4m0w" target="_blank">1 min video of ronaldo link</a> </li>
+    <li>Shuttle cork🏸 <a href="https://youtu.be/RoOo7g5V62A" target="_blank">how to take cork for floor link </a>
     </li>
   </ol>
 <hr>
@@ -69,22 +69,10 @@
 <h3>MY CONTACT DETAILS:</h3>
   <OL type="i">
 
-     <li>my name 😎        :S.RAHUL </li>
-    <li>my address 🏠      :no.7 A.A.M nagar,T.V puram,ponneri-601204</li>
-    <li>my phone number 📞 :8610600878</li>
-    <li>my email I.D 📧    : rahulsenthilkumarp@gmail.com </li>
+     <li>My name 😎        :S.RAHUL </li>
+    <li>My address 🏠      :no.7 A.A.M nagar,T.V puram,ponneri-601204</li>
+    <li>My phone number 📞 :8610600878</li>
+    <li>My email I.D 📧    : rahulsenthilkumarp@gmail.com </li>
   </OL>
-
-
-
-
-
-
-
-
-
-
-
 </body>
-
 </html>
