--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
   <title>RAHUL PORTFOLIO 😎</title>
 </head>
 
@@ -13,66 +14,65 @@
       <td> <img width="180" height="180" style="border-radius: 100%;" src="rahul.jpg" alt="RAHUL PROFILE PICTURE">
       </td>
       <td>
-        <h1>S.RAUHL😎</h1>
-        <p>
-          <i>SON OF <strong>:SENTHIL KUMAR</strong></i>
-        </p>
-        <p>I'am studying 10th standard</p>
+        <h1 style="color:blue">S.RAUHL😎</h1>
+        <p style="color:blue"><strong>SON OF SENTHIL KUMAR </strong></p>
+        <p style="color:blue"><strong>I'M STUDYING 10TH STANDARD</strong></p>
       </td>
     </tr>
   </table>
-  <HR>
-  </HR>
+ <HR></HR>
 
-<h3>MY STUDYING EXPERIENCE:</h3>
+<h3> <U> MY STUDYING EXPERIENCE:</U> </h3>
   <ul>
-    <li>U.K.G to second standard in james matriculation school ponneri</li>
-    <li>Studying in Velammal matriculation school Ponneri since 2013</li>
+    <li>U.K.G to Second standard in James matriculation school ponneri. </li>
+    <li>I'am studying in velmmal matriculation school ponneri from Third standard.</li>
   </ul>
 
-<h3>MY SKILLS:</h3>
+<h3> <U> MY SKILLS:</U></h3>
   <table>
     <tr>
       <td>Cricket:</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Rubix cube:</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Computer knowledge:</td>
-      <td>⭐⭐⭐</td>
+      <td>Technology knowledge:</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>HTML:</td>
       <td>⭐⭐⭐</td>
     </tr>
   </table>
-    
 
-  <h3>MY HOBBIES:</h3>
+  <h3><U>MY HOBBIES:</U></h3>
   <ul>
-    <li>Watching sports on TV📺</li>
-    <li>Playing Cricket🏏</li>
-    <li>Playing Games🤖</li>
+    <li>Watching sports 📺</li>
+    <li>Playing cricket🏏</li>
+    <li>Playing games🤖</li>
   </ul>
-  <h3>FAVOURITE SPORTS: </h3>
+  <h3 ><U>FAVOURITE SPORTS:</U></h3>
   <ol>
-    <li>Cricket🏏 <a href="https://youtu.be/R0alThHNb0Y" target="_blank">2015 world cup fast ball link</a> </li>
-    <li>Foot ball⚽ <a href="https://youtu.be/sNZPEnc4m0w" target="_blank">1 min video of ronaldo link</a> </li>
-    <li>Shuttle cork🏸 <a href="https://youtu.be/RoOo7g5V62A" target="_blank">how to take cork for floor link </a>
+    <li>Cricket🏏 - <a style="color:blue"href="https://youtu.be/R0alThHNb0Y" target="_blank">2015 world cup fast ball link</a> </li>
+    <li>Foot ball⚽ - <a style="color:blue"href="https://youtu.be/sNZPEnc4m0w" target="_blank">1 min video of ronaldo link</a> </li>
+    <li>Shuttle 🏸 - <a style="color:blue"href="https://youtu.be/RoOo7g5V62A" target="_blank">how to take cork from floor link </a>
     </li>
   </ol>
 <hr>
 
-<h3>MY CONTACT DETAILS:</h3>
+<h3><U>MY CONTACT DETAILS:</U></h3>
   <OL type="i">
 
      <li>My name 😎        :S.RAHUL </li>
     <li>My address 🏠      :no.7 A.A.M nagar,T.V puram,ponneri-601204</li>
     <li>My phone number 📞 :8610600878</li>
     <li>My email I.D 📧    : rahulsenthilkumarp@gmail.com </li>
+   <a style="color:blue"           href="contactme.html"><h2>Contact me</h2> </a>
   </OL>
+<HR><HR></HR></HR>
+
 </body>
 </html>
