--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td> <img width="180" height="180" style="border-radius: 100%;" src="rahul.jpg" alt="RAHUL PROFILE PICTURE">
       </td>
       <td>
-        <h1 style="color:blue">S.RAUHL😎</h1>
+        <h1 style="color:blue">S.RAHUL😎</h1>
         <p style="color:blue"><strong>SON OF SENTHIL KUMAR </strong></p>
         <p style="color:blue"><strong>I'M STUDYING 10TH STANDARD</strong></p>
       </td>
